-- esboço projeto operationLogs com httprequestsLogs
    1 criar tabela HttpRequestsLogs onde salvará httpRequestLogId, ticket, requestDate, requestFinishedDate, requestPath, requestIp, ownerOperationUserId
    2 mudar nome tabela ProcedureStatistics para OperationLogs
    3 adicionar coluna is_checkpoint na tabela OperationLogs
    4 Mudar procs para o novo nome de tabela
    5 Mudar back para incluir a nova coluna
    6 



-- OK TESTADO testar picture em auth/register


pendencias:
* validar swagger campos requireds
* após o cadastro enviar email de confirmacao
    * TESTAR no retorno de created 201 melhorar descrição dizendo que foi enviado email
    * pensar na possibilidade de quando resetar email tambem deixar emailCOnfirmed = 1

* OK cadastrar usuario com external login
    * considerar picture que recebemos

* padronizar em um enum os tipos de nomenclaturas para UserToken process name

* TESTAR validar uri no metodo post google

* TESTAR conferir se existe metodo com nomenclatura url mudar para uri nos parametros e na documentação

* TESTAR processo de envio de email nao esta passando o ticket, mapear outras procs que tambem estao nessa situação