@@ -1,3 +1,5 @@
+02/04/2024 - dar continuidade aos testes com /forget nao esta enviando email na thread
+
 -- esboço projeto operationLogs com httprequestsLogs
     1 criar tabela HttpRequestsLogs onde salvará httpRequestLogId, ticket, requestDate, requestFinishedDate, requestPath, requestIp, ownerOperationUserId
     2 mudar nome tabela ProcedureStatistics para OperationLogs
@@ -12,6 +14,7 @@
 
 
 pendencias:
+* ok resolvido email nao ta passando ticket
 * validar swagger campos requireds
 * após o cadastro enviar email de confirmacao
     * TESTAR no retorno de created 201 melhorar descrição dizendo que foi enviado email
